Updated few things

--- a/src/app/home/about-me/about-me.component.html
+++ b/src/app/home/about-me/about-me.component.html
@@ -11,6 +11,37 @@
         margins.
       </section>
       <br />
+      <section class="label">Core Competencies:</section>
+      <br />
+      <p>
+        Define and enforce software architecture standards, design patterns, and
+        coding best practices.
+      </p>
+      <p>
+        Expertise in designing, developing, and testing of software applications
+        and/or infrastructure.
+      </p>
+      <p>
+        Demonstrated experience in designing and developing event-driven system
+        architectures.
+      </p>
+      <p>
+        Skilled in building custom, high scale, n-tier applications using
+        object-orientated languages.
+      </p>
+      <p>
+        Configure and integrate purchased software to meet business and IT
+        requirements.
+      </p>
+      <p>
+        Excellent communication skills and proven ability to collaborate with a
+        variety of teams.
+      </p>
+      <p>
+        Proven ability to introduce new ideas and technologies to communities of
+        developers.
+      </p>
+      <br />
       <section class="label">Some examples of my results include:</section>
       <br />
       <p>
