--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -34,7 +34,7 @@
             data-aos-duration="2000"
           >
             <h4>
-              System Engineer <em class="highlight">|</em> Tata Consultancy
+              Full Stack Developer <em class="highlight">|</em> Tata Consultancy
               Services
             </h4>
             <h5>August, 2020 - August, 2022</h5>
