Updated about me section

--- a/src/app/home/about-me/about-me.component.html
+++ b/src/app/home/about-me/about-me.component.html
@@ -5,10 +5,19 @@
       <app-heading></app-heading>
       <br />
       <section>
-        Innovative Full Stack Developer with 2+ years in the software
-        engineering space. I helped company like TATA Consultancy Services
-        improve their web performance and user engagement by significant
-        margins.
+        Analytical, solutions-oriented Full Stack software development
+        professional with experience driving complex, large-scale technical
+        projects covering software/database/network development, product
+        implementation, and technical support. Special expertise in assessing
+        risk and translating innovative ideas into technology solutions. Expert
+        ability to develop and deploy new features, add functionality to
+        products, stabilize performance, and elevate overall user experience.
+        Well-versed in developing digital user information solutions by
+        creating, applying and maintaining Java-based modules and interfaces for
+        back end and client-end mobile and desktop applications. Natural leader
+        and collaborative team player able to oversee high-stakes, large-scale
+        products, plan Agile sprints, diagnose/ troubleshoot issues, and partner
+        with cross-functional teams.
       </section>
       <br />
       <section class="label">Core Competencies:</section>
