Fixed few css issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 <div class="page-content m-3">
-  <router-outlet></router-outlet>
+  <app-banner></app-banner>
+  <app-about-me id="about"></app-about-me>
+  <app-experience id="experience"></app-experience>
+  <app-education id="education"></app-education>
+  <app-projects id="projects"></app-projects>
+  <app-contact id="contact"></app-contact>
 </div>
 <app-footer></app-footer>
