--- a/src/app/general/header/header.component.css
+++ b/src/app/general/header/header.component.css
@@ -49,6 +49,6 @@ nav {
 }
 
 .nav-shadow {
-  box-shadow: 0 10px 30px -10px var(--gradient-color-2);
+  box-shadow: 0 10px 30px -10px darkgray;
   transition: box-shadow 500ms;
 }
