--- a/src/app/home/about-me/about-me.component.html
+++ b/src/app/home/about-me/about-me.component.html
@@ -1,240 +1,258 @@
-<div class="container-fluid h-100">
-  <div class="row h-100" data-aos="fade-up" data-aos-duration="2000">
+<div class="about-container container-fluid h-100 py-5">
+  <div class="row h-100">
     <div class="col-lg-2"></div>
     <div class="col col-lg-8 h-100">
-      <app-heading></app-heading>
-      <br />
-      <section>
-        Analytical, solutions-oriented Full Stack software development
-        professional with experience driving complex, large-scale technical
-        projects covering software/database/network development, product
-        implementation, and technical support. Special expertise in assessing
-        risk and translating innovative ideas into technology solutions. Expert
-        ability to develop and deploy new features, add functionality to
-        products, stabilize performance, and elevate overall user experience.
-        Well-versed in developing digital user information solutions by
-        creating, applying and maintaining Java-based modules and interfaces for
-        back end and client-end mobile and desktop applications. Natural leader
-        and collaborative team player able to oversee high-stakes, large-scale
-        products, plan Agile sprints, diagnose/ troubleshoot issues, and partner
-        with cross-functional teams.
-      </section>
-      <br />
-      <section class="label">Core Competencies:</section>
-      <br />
-      <p>
-        Define and enforce software architecture standards, design patterns, and
-        coding best practices.
-      </p>
-      <p>
-        Expertise in designing, developing, and testing of software applications
-        and/or infrastructure.
-      </p>
-      <p>
-        Demonstrated experience in designing and developing event-driven system
-        architectures.
-      </p>
-      <p>
-        Skilled in building custom, high scale, n-tier applications using
-        object-orientated languages.
-      </p>
-      <p>
-        Configure and integrate purchased software to meet business and IT
-        requirements.
-      </p>
-      <p>
-        Excellent communication skills and proven ability to collaborate with a
-        variety of teams.
-      </p>
-      <p>
-        Proven ability to introduce new ideas and technologies to communities of
-        developers.
-      </p>
-      <br />
-      <section class="label">Some examples of my results include:</section>
-      <br />
-      <p>
-        Engineered a single-page Angular application at TATA Consultancy
-        Services, contributing to a
-        <em class="highlight">20% improvement in system performance</em>.
-      </p>
-      <p>
-        Assisted in Node.js app deployment, learning about efficient deployment
-        strategies to ensure <em class="highlight">zero downtime</em>.
-      </p>
-
-      <p>
-        Integrated mail functionality, contributing to a
-        <em class="highlight">25% improvement in user engagement</em> with
-        transactional emails.
-      </p>
-
-      <p>
-        Constructed a Node.js server for an Angular application, contributing to
-        a <em class="highlight">20% improvement in system performance</em>.
-      </p>
-
-      <p>
-        Boosted data retrieval efficiency with Oracle DB and REST APIs,
-        resulting in a <em class="highlight">20% improvement</em>.
-      </p>
-
-      <br />
-
-      <section class="label">
-        In terms of cultural fit and extracurricular activities:
-      </section>
-
-      <br />
-
-      <section>
-        Actively maintain a GitHub profile with various projects and
-        contributions. Participate in cyber-security challenges on TryHackMe. I
-        get excited about opportunities where I can leverage my full-stack
-        development skills to solve complex problems and contribute to team
-        success. I am particularly interested in roles that allow me to continue
-        learning and growing in the field of web development and software
-        engineering.
-      </section>
-
-      <br />
-
-      <div class="container text-center">
-        <a
-          id="thm_badge"
-          class="thm_margin"
-          href="https://tryhackme.com/p/zang2012"
-          target="_blank"
-        >
-          <div style="width: auto; border-radius: 4px; margin-right: 0px">
-            <div
-              class="thm_avatar"
-              style="
-                background-image: url(https://tryhackme-images.s3.amazonaws.com/user-avatars/977b4b67ed49d2436c2c71a207237753.jpeg);
-              "
-            ></div>
-          </div>
-          <div
-            style="
-              margin-left: 25px;
-              width: 220px;
-              height: 56px;
-              background-color: #343c42;
-              border-radius: 5px;
-              text-align: left;
-              background-image: url(https://assets.tryhackme.com/img/thm_logo_only.svg);
-              background-size: 23px 23px;
-              background-position: right 5px bottom 5px;
-              background-repeat: no-repeat;
-            "
-          >
-            <div
-              class="thm_font"
-              style="
-                box-sizing: content-box;
-                height: 50px;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                padding-left: 8px;
-                padding-top: 5px;
-              "
-            >
-              <p class="thm_line" style="margin-bottom: 3px">
-                <span class="thm_nickname">zang2012</span>
-                <span class="thm_rank">[0xC][Guru]</span><br />
-              </p>
-              <p
-                class="thm_line"
-                style="margin-bottom: 1px; display: flex; align-items: center"
-              >
-                <img
-                  class="thm_icon thm_mr"
-                  src="https://assets.tryhackme.com/img/badges/trophy.png"
-                  alt="trophy"
-                />
-                <span class="thm_stat thm_mr">13820</span>
-                <img
-                  class="thm_icon thm_mr"
-                  src="https://assets.tryhackme.com/img/badges/door.png"
-                  alt="door"
-                />
-                <span class="thm_stat thm_mr">137</span>
-                <img
-                  class="thm_icon thm_mr"
-                  src="https://assets.tryhackme.com/img/badges/target.png"
-                  alt="target"
-                />
-                <span class="thm_stat">14</span><br />
-              </p>
-              <p class="thm_line">
-                <a
-                  href="https://www.tryhackme.com"
-                  target="_blank"
-                  class="thm_link"
-                  >tryhackme.com</a
-                >
-              </p>
-            </div>
-          </div>
-        </a>
+      <div class="row">
+        <div class="col">
+          <!-- <app-heading></app-heading> -->
+          <h3>
+            <span class="title-number"> 01. </span>
+            <span class="title-text"> About Me </span>
+          </h3>
+        </div>
       </div>
+      <div class="row" data-aos="fade-right">
+        <div class="col">
+          <section>
+            Analytical, solutions-oriented Full Stack software development
+            professional with experience driving complex, large-scale technical
+            projects covering software/database/network development, product
+            implementation, and technical support. Special expertise in
+            assessing risk and translating innovative ideas into technology
+            solutions. Expert ability to develop and deploy new features, add
+            functionality to products, stabilize performance, and elevate
+            overall user experience. Well-versed in developing digital user
+            information solutions by creating, applying and maintaining
+            Java-based modules and interfaces for back end and client-end mobile
+            and desktop applications. Natural leader and collaborative team
+            player able to oversee high-stakes, large-scale products, plan Agile
+            sprints, diagnose/ troubleshoot issues, and partner with
+            cross-functional teams.
+          </section>
+          <br />
+          <section class="label">Core Competencies:</section>
+          <br />
+          <p>
+            Define and enforce software architecture standards, design patterns,
+            and coding best practices.
+          </p>
+          <p>
+            Expertise in designing, developing, and testing of software
+            applications and/or infrastructure.
+          </p>
+          <p>
+            Demonstrated experience in designing and developing event-driven
+            system architectures.
+          </p>
+          <p>
+            Skilled in building custom, high scale, n-tier applications using
+            object-orientated languages.
+          </p>
+          <p>
+            Configure and integrate purchased software to meet business and IT
+            requirements.
+          </p>
+          <p>
+            Excellent communication skills and proven ability to collaborate
+            with a variety of teams.
+          </p>
+          <p>
+            Proven ability to introduce new ideas and technologies to
+            communities of developers.
+          </p>
+          <br />
+          <section class="label">Some examples of my results include:</section>
+          <br />
+          <p>
+            Engineered a single-page Angular application at TATA Consultancy
+            Services, contributing to a
+            <em class="highlight">20% improvement in system performance</em>.
+          </p>
+          <p>
+            Assisted in Node.js app deployment, learning about efficient
+            deployment strategies to ensure
+            <em class="highlight">zero downtime</em>.
+          </p>
 
-      <!-- <br />
-      <br />
+          <p>
+            Integrated mail functionality, contributing to a
+            <em class="highlight">25% improvement in user engagement</em> with
+            transactional emails.
+          </p>
 
-      <a
-        class="link"
-        (click)="
-          googleAnalytics.sendAnalyticEvent(
-            'click_link',
-            'about-me',
-            'tryhackme-link'
-          )
-        "
-        href="https://tryhackme.com/p/zang2012"
-        target="_blank"
-      >
-        Link to my TRYHACKME profile
-      </a> -->
+          <p>
+            Constructed a Node.js server for an Angular application,
+            contributing to a
+            <em class="highlight">20% improvement in system performance</em>.
+          </p>
 
-      <!-- <br /> -->
-      <br />
+          <p>
+            Boosted data retrieval efficiency with Oracle DB and REST APIs,
+            resulting in a <em class="highlight">20% improvement</em>.
+          </p>
 
-      <section class="label">
-        Some of the technologies that I have trained and worked on include (but
-        are not limited to):
-      </section>
+          <br />
 
-      <!-- <ul class="skill-list">
-                <li><span class="underline">Angular</span></li>
-                <li><span class="underline">HTML & CSS</span></li>
-                <li><span class="underline">Express.js</span></li>
-                <li><span class="underline">Node.js</span></li>
-                <li><span class="underline">Python</span></li>
-                <li><span class="underline">Bootstrap, Material</span></li>
-                <li><span class="underline">JavaScript, TypeScript</span></li>
-                <li><span class="underline">Oracle, SQL, SQLite</span></li>
-                <li><span class="underline">Git, Github</span></li>
-            </ul> -->
-      <div appInfiniteScroll class="scroller" data-direction="left">
-        <ul class="tag-list scroller__inner">
-          <li>Angular</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Express.js</li>
-          <li>Node.js</li>
-          <li>Python</li>
-          <li>Bootstrap</li>
-          <li>Material</li>
-          <li>JavaScript</li>
-          <li>TypeScript</li>
-          <li>Oracle</li>
-          <li>SQL</li>
-          <li>SQLite</li>
-          <li>Git</li>
-          <li>Github</li>
-        </ul>
+          <section class="label">
+            In terms of cultural fit and extracurricular activities:
+          </section>
+
+          <br />
+
+          <section>
+            Actively maintain a GitHub profile with various projects and
+            contributions. Participate in cyber-security challenges on
+            TryHackMe. I get excited about opportunities where I can leverage my
+            full-stack development skills to solve complex problems and
+            contribute to team success. I am particularly interested in roles
+            that allow me to continue learning and growing in the field of web
+            development and software engineering.
+          </section>
+
+          <br />
+
+          <div class="container text-center">
+            <a
+              id="thm_badge"
+              class="thm_margin"
+              href="https://tryhackme.com/p/zang2012"
+              target="_blank"
+            >
+              <div style="width: auto; border-radius: 4px; margin-right: 0px">
+                <div
+                  class="thm_avatar"
+                  style="
+                    background-image: url(https://tryhackme-images.s3.amazonaws.com/user-avatars/977b4b67ed49d2436c2c71a207237753.jpeg);
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  margin-left: 25px;
+                  width: 220px;
+                  height: 56px;
+                  background-color: #343c42;
+                  border-radius: 5px;
+                  text-align: left;
+                  background-image: url(https://assets.tryhackme.com/img/thm_logo_only.svg);
+                  background-size: 23px 23px;
+                  background-position: right 5px bottom 5px;
+                  background-repeat: no-repeat;
+                "
+              >
+                <div
+                  class="thm_font"
+                  style="
+                    box-sizing: content-box;
+                    height: 50px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    padding-left: 8px;
+                    padding-top: 5px;
+                  "
+                >
+                  <p class="thm_line" style="margin-bottom: 3px">
+                    <span class="thm_nickname">zang2012</span>
+                    <span class="thm_rank">[0xC][Guru]</span><br />
+                  </p>
+                  <p
+                    class="thm_line"
+                    style="
+                      margin-bottom: 1px;
+                      display: flex;
+                      align-items: center;
+                    "
+                  >
+                    <img
+                      class="thm_icon thm_mr"
+                      src="https://assets.tryhackme.com/img/badges/trophy.png"
+                      alt="trophy"
+                    />
+                    <span class="thm_stat thm_mr">13820</span>
+                    <img
+                      class="thm_icon thm_mr"
+                      src="https://assets.tryhackme.com/img/badges/door.png"
+                      alt="door"
+                    />
+                    <span class="thm_stat thm_mr">137</span>
+                    <img
+                      class="thm_icon thm_mr"
+                      src="https://assets.tryhackme.com/img/badges/target.png"
+                      alt="target"
+                    />
+                    <span class="thm_stat">14</span><br />
+                  </p>
+                  <p class="thm_line">
+                    <a
+                      href="https://www.tryhackme.com"
+                      target="_blank"
+                      class="thm_link"
+                      >tryhackme.com</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <!-- <br />
+          <br />
+    
+          <a
+            class="link"
+            (click)="
+              googleAnalytics.sendAnalyticEvent(
+                'click_link',
+                'about-me',
+                'tryhackme-link'
+              )
+            "
+            href="https://tryhackme.com/p/zang2012"
+            target="_blank"
+          >
+            Link to my TRYHACKME profile
+          </a> -->
+
+          <!-- <br /> -->
+          <br />
+
+          <section class="label">
+            Some of the technologies that I have trained and worked on include
+            (but are not limited to):
+          </section>
+
+          <!-- <ul class="skill-list">
+                    <li><span class="underline">Angular</span></li>
+                    <li><span class="underline">HTML & CSS</span></li>
+                    <li><span class="underline">Express.js</span></li>
+                    <li><span class="underline">Node.js</span></li>
+                    <li><span class="underline">Python</span></li>
+                    <li><span class="underline">Bootstrap, Material</span></li>
+                    <li><span class="underline">JavaScript, TypeScript</span></li>
+                    <li><span class="underline">Oracle, SQL, SQLite</span></li>
+                    <li><span class="underline">Git, Github</span></li>
+                </ul> -->
+          <div appInfiniteScroll class="scroller" data-direction="left">
+            <ul class="tag-list scroller__inner">
+              <li>Angular</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Express.js</li>
+              <li>Node.js</li>
+              <li>Python</li>
+              <li>Bootstrap</li>
+              <li>Material</li>
+              <li>JavaScript</li>
+              <li>TypeScript</li>
+              <li>Oracle</li>
+              <li>SQL</li>
+              <li>SQLite</li>
+              <li>Git</li>
+              <li>Github</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="col-lg-2"></div>
