--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,7 +1,11 @@
-<div class="container-fluid" data-aos="fade-up" data-aos-duration="2000">
+<div class="contact-container container-fluid py-5" data-aos="fade-right">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-4">
-      <app-heading></app-heading>
+      <!-- <app-heading></app-heading> -->
+      <h3>
+        <span class="title-number"> 05. </span>
+        <span class="title-text"> Contact </span>
+      </h3>
     </div>
   </div>
   <div class="row justify-content-center">
