--- a/src/app/home/education/education.component.html
+++ b/src/app/home/education/education.component.html
@@ -1,8 +1,12 @@
-<div class="container-fluid h-100">
+<div class="education-container container-fluid h-100 py-5">
   <div class="row h-100">
     <div class="col-lg-2"></div>
     <div class="col col-lg-8 h-100">
-      <app-heading></app-heading>
+      <!-- <app-heading></app-heading> -->
+      <h3>
+        <span class="title-number"> 03. </span>
+        <span class="title-text"> Education </span>
+      </h3>
       <div class="container-fluid h-100">
         <div class="row h-100">
           <div class="col-12 col-lg-3 m-0 mb-2">
@@ -42,8 +46,7 @@
           <div
             *ngIf="tab === 'Master'"
             class="col-12 col-lg"
-            data-aos="fade-up"
-            data-aos-duration="2000"
+            data-aos="fade-right"
           >
             <h4>
               Master of Applied Computer Science
@@ -62,8 +65,7 @@
           <div
             *ngIf="tab === 'Bachelor'"
             class="col-12 col-lg"
-            data-aos="fade-up"
-            data-aos-duration="2000"
+            data-aos="fade-right"
           >
             <h4>
               B. Tech in Software Engineering <em class="highlight">|</em> SRM
