--- a/src/app/home/experience/experience.component.html
+++ b/src/app/home/experience/experience.component.html
@@ -1,8 +1,12 @@
-<div class="container-fluid h-100">
+<div class="experience-container container-fluid h-100 py-5">
   <div class="row h-100">
     <div class="col-lg-2"></div>
     <div class="col col-lg-8 h-100">
-      <app-heading></app-heading>
+      <!-- <app-heading></app-heading> -->
+      <h3>
+        <span class="title-number"> 02. </span>
+        <span class="title-text"> Experience </span>
+      </h3>
       <div class="container-fluid h-100">
         <div class="row h-100">
           <div class="col-12 col-lg-3 m-0 mb-2">
@@ -22,16 +26,12 @@
                   >TCS</a
                 >
               </li>
-              <!-- <li>
-                                <a class="nav-link" [ngClass]="{'active': tab === 'Google'}" (click)="selectedTab('Google')">Google</a>
-                            </li> -->
             </ul>
           </div>
           <div
             *ngIf="tab === 'TCS'"
             class="col-12 col-lg"
-            data-aos="fade-up"
-            data-aos-duration="2000"
+            data-aos="fade-right"
           >
             <h4>
               Full Stack Developer <em class="highlight">|</em> Tata Consultancy
@@ -91,8 +91,7 @@
           <div
             *ngIf="tab === 'Google'"
             class="col-12 col-lg"
-            data-aos="fade-up"
-            data-aos-duration="2000"
+            data-aos="fade-right"
           >
             <h4>Software Engineer | Google</h4>
             <h5>August, 2024 - Present</h5>
