--- a/src/app/home/projects/projects.component.html
+++ b/src/app/home/projects/projects.component.html
@@ -1,14 +1,14 @@
-<div class="container-fluid p-0 pb-5 pr-lg-5 pl-lg-5">
+<div class="projects-container container-fluid py-5">
   <div class="row">
-    <div class="col-12">
-      <app-heading></app-heading>
+    <div class="col col-lg offset-lg-2">
+      <!-- <app-heading></app-heading> -->
+      <h3>
+        <span class="title-number"> 04. </span>
+        <span class="title-text"> Projects </span>
+      </h3>
     </div>
   </div>
-  <div
-    class="row m-0 mr-2 ml-2 mb-3"
-    data-aos="fade-up"
-    data-aos-duration="2000"
-  >
+  <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-right">
     <div class="container-fluid p-0 pr-3">
       <div class="row">
         <div class="col-12 col-lg-3 offset-lg-9">
@@ -73,11 +73,7 @@
       </div>
     </div>
   </div>
-  <div
-    class="row m-0 mr-2 ml-2 mb-3"
-    data-aos="fade-up"
-    data-aos-duration="2000"
-  >
+  <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-right">
     <div class="container-fluid p-0 pr-3">
       <div class="row">
         <div class="col-12">
@@ -138,11 +134,7 @@
       </div>
     </div>
   </div>
-  <div
-    class="row m-0 mr-2 ml-2 mb-3"
-    data-aos="fade-up"
-    data-aos-duration="2000"
-  >
+  <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-right">
     <div class="container-fluid p-0 pr-3">
       <div class="row">
         <div class="col-12 col-lg-3 offset-lg-9">
@@ -205,11 +197,7 @@
       </div>
     </div>
   </div>
-  <div
-    class="row m-0 mr-2 ml-2 mb-3"
-    data-aos="fade-up"
-    data-aos-duration="2000"
-  >
+  <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-right">
     <div class="container-fluid p-0 pr-3">
       <div class="row">
         <div class="col-12">
@@ -272,11 +260,7 @@
       </div>
     </div>
   </div>
-  <div
-    class="row m-0 mr-2 ml-2 mb-3"
-    data-aos="fade-up"
-    data-aos-duration="2000"
-  >
+  <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-right">
     <div class="container-fluid p-0 pr-3">
       <div class="row">
         <div class="col-12 col-lg-3 offset-lg-9">
@@ -319,11 +303,7 @@
       </div>
     </div>
   </div>
-  <div
-    class="row m-0 mr-2 ml-2 mb-3"
-    data-aos="fade-up"
-    data-aos-duration="2000"
-  >
+  <div class="row m-0 mr-2 ml-2 mb-3" data-aos="fade-right">
     <div class="container-fluid p-0 pr-3">
       <div class="row">
         <div class="col-12">
