--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,8 @@
 html {
   color-scheme: dark light;
   height: 100%;
+  scroll-behavior: smooth;
+  scroll-padding-top: 8rem !important;
 }
 
 body {
@@ -41,6 +43,14 @@ body {
   font: inherit;
   font-size: 16px;
   font-family: "Young Serif";
+}
+
+.about-container,
+.experience-container,
+.education-container,
+.projects-container,
+.contact-container {
+  min-height: 100vh;
 }
 
 img,
@@ -212,3 +222,30 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* Infinite Scroll END */
+
+/** HEADING **/
+h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  position: relative;
+}
+
+h3::after {
+  content: "";
+  position: absolute;
+  top: 60%;
+  width: 50%;
+  background-color: var(--accent-color);
+  opacity: 0.8;
+  height: 0.1rem;
+  margin-left: 0.625rem;
+}
+
+.title-number {
+  color: var(--accent-color);
+  font-size: 1.75rem;
+}
+
+.title-text {
+  font-size: 1.75rem;
+}
