--- a/src/app/general/header/header.component.html
+++ b/src/app/general/header/header.component.html
@@ -40,9 +40,8 @@
           class="nav-link"
           data-bs-toggle="collapse"
           data-bs-target=".navbar-collapse.show"
-          [routerLink]="['/']"
-          fragment="about"
-          [class.active]="isActive('/#about')"
+          routerLink="about"
+          routerLinkActive="active"
           >01. About Me</a
         >
         <a
@@ -56,9 +55,8 @@
           class="nav-link"
           data-bs-toggle="collapse"
           data-bs-target=".navbar-collapse.show"
-          [routerLink]="['/']"
-          fragment="experience"
-          [class.active]="isActive('/#experience')"
+          routerLink="experience"
+          routerLinkActive="active"
           >02. Experience</a
         >
         <a
@@ -72,9 +70,8 @@
           class="nav-link"
           data-bs-toggle="collapse"
           data-bs-target=".navbar-collapse.show"
-          [routerLink]="['/']"
-          fragment="education"
-          [class.active]="isActive('/#education')"
+          routerLink="education"
+          routerLinkActive="active"
           >03. Education</a
         >
         <a
@@ -88,9 +85,8 @@
           class="nav-link"
           data-bs-toggle="collapse"
           data-bs-target=".navbar-collapse.show"
-          [routerLink]="['/']"
-          fragment="projects"
-          [class.active]="isActive('/#projects')"
+          routerLink="projects"
+          routerLinkActive="active"
           >04. Projects</a
         >
         <a
@@ -104,9 +100,8 @@
           class="nav-link"
           data-bs-toggle="collapse"
           data-bs-target=".navbar-collapse.show"
-          [routerLink]="['/']"
-          fragment="contact"
-          [class.active]="isActive('/#contact')"
+          routerLink="contact"
+          routerLinkActive="active"
           >05. Contact</a
         >
         <a
