--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="contact-container container-fluid py-5" data-aos="fade-right">
+<div class="contact-container container-fluid py-5">
   <div class="row justify-content-center">
-    <div class="col-12 col-lg-4">
+    <div class="col-12 col-lg-8">
       <!-- <app-heading></app-heading> -->
       <h3>
         <span class="title-number"> 05. </span>
@@ -8,7 +8,7 @@
       </h3>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" data-aos="fade-right">
     <div class="col-8 text-center">
       <h2>Get in touch!</h2>
       <p>
