--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
 <app-header></app-header>
 <div class="page-content m-3">
-  <!-- <app-banner></app-banner>
-  <app-about-me id="about"></app-about-me>
-  <app-experience id="experience"></app-experience>
-  <app-education id="education"></app-education>
-  <app-projects id="projects"></app-projects>
-  <app-contact id="contact"></app-contact> -->
+  <div id="particles-js"></div>
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
